/***********************************************************************
X3 ChangeLog

2009-12-09  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	src/nickserv.c: Shuffle the auto oper functions around to fix a
	desync issue.

	src/proto-p10.c: Ignore PRIV_NONE within the first 5 seconds of
	a client's connection. Temp fix for now.

2009-12-06  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Removed seemingly unnecessary "cannot invite"
	warning from chan_opt_automode.

2009-12-02  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Added merging SSL fingerprint lists during
	account merging.

2009-12-01  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/opserv.c: Added ADDALERT reactions noticeuser and msguser
	to go with trace reactions notice and privmsg.

2009-11-29  Matthew Beeching  <jobe@mdbnmet.co.uk>

	* src/nickserv.c: Rewrote parts of loc_auth() to get it working
	the same as cmd_auth() with regards to SSL fingerprint support.

2009-11-29  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/nickserv.c: Small tweak.

2009-11-29  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/nickserv.c: Small tweak to the password checks with sslfp LOC.

2009-11-29  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
	* src/nickserv.c: Added SSL fingerprint support to LOC.

	* src/nickserv.h: Added sslfp to loc_auth.

	* src/proto-p10.c: Added support for the new S loc auth type.

2008-11-28  Matthew Beeching  <jobe@mdbnmet.co.uk>

	* src/nickserv.help: Added help for ADDSSLFP, DELSSLFP, OADDSSLFP
	and ODELSSLFP

	* src/nickserv.c: Added support for SSL fingerprint authentication.

	* src/nickserv.h: Added support for SSL fingerprint authentication.

2009-11-28  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/mod-memoserv.c: Fix for bug where MemoServ is created as a
	local bot but not registered as a service on first startup.

2009-11-26  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Fixed a missing ',' in cmd_myaccess output.
